Revert "chore: run format"
This reverts commit 69cb5a23d58ee9fde5da734eb329c924f7c1eeab.

--- a/src/pages/community/patterns/chatbot/content.mdx
+++ b/src/pages/community/patterns/chatbot/content.mdx
@@ -88,8 +88,7 @@ Ensure the success of your bot by following these principles:
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
       subTitle="IBM Design for AI: Conversation"
-      href="http://ai-design.eu-de.mybluemix.net/design/ai/conversation/planning"
-    >
+      href="http://ai-design.eu-de.mybluemix.net/design/ai/conversation/planning">
       <MdxIcon name="bee" />
     </ResourceCard>
   </Column>
