--- a/src/pages/community/patterns/chatbot/overview.mdx
+++ b/src/pages/community/patterns/chatbot/overview.mdx
@@ -133,8 +133,7 @@ guidance related to your use case.
     title="Chatbot Design Kit"
     aspectRatio="2:1"
     actionIcon="launch"
-    href="https://www.sketch.com/s/d6986eb8-bf0d-4695-abe8-9e79909d4518"
-  >
+    href="https://www.sketch.com/s/d6986eb8-bf0d-4695-abe8-9e79909d4518">
     <MdxIcon name="sketch" />
   </ResourceCard>
 </Column>
