--- a/src/pages/components/accordion/usage.mdx
+++ b/src/pages/components/accordion/usage.mdx
@@ -54,8 +54,7 @@ extra click; instead use a full scrolling page with normal headers.
       id: 'accordion',
       label: 'Accordion',
     },
-  ]}
->
+  ]}>
   <ComponentVariant
     id="accordion"
     knobs={{
@@ -67,12 +66,11 @@ extra click; instead use a full scrolling page with normal headers.
         'https://react.carbondesignsystem.com/?path=/story/components-accordion--accordion',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-accordion--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvaccordion--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvaccordion--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=accordion',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-accordion--default',
-    }}
-  >
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-accordion--default',
+    }}>
     {`
   <Accordion>
     <AccordionItem title="Title 1"><p>The accordion component delivers large amounts of content in a small space through progressive disclosure. The user gets key details about the underlying content and can choose to expand that content within the constraints of the accordion. Accordions work especially well on mobile interfaces or whenever vertical space is at a premium.</p></AccordionItem>
