--- a/src/pages/components/code-snippet/usage.mdx
+++ b/src/pages/components/code-snippet/usage.mdx
@@ -75,8 +75,7 @@ length use cases—inline, single line, and multi-line.
       id: 'code-snippet-inline',
       label: 'Inline',
     },
-  ]}
->
+  ]}>
   <ComponentVariant
     id="code-snippet-single"
     knobs={{ CodeSnippet: ['light'] }}
@@ -85,12 +84,11 @@ length use cases—inline, single line, and multi-line.
         'https://react.carbondesignsystem.com/?path=/story/components-codesnippet--singleline',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-code-snippet--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvcodesnippet--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvcodesnippet--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=code-snippet',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-code-snippet--single-line',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-code-snippet--single-line',
+    }}>{`
     <CodeSnippet type="single">${codeSnippetSingle}</CodeSnippet>
 `}</ComponentVariant>
   <ComponentVariant
@@ -101,12 +99,11 @@ length use cases—inline, single line, and multi-line.
         'https://react.carbondesignsystem.com/?path=/story/components-codesnippet--multiline',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-code-snippet--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvcodesnippet--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvcodesnippet--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=code-snippet',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-code-snippet--multi-line',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-code-snippet--multi-line',
+    }}>{`
     <CodeSnippet type="multi">
     {codeSnippet}
     </CodeSnippet>
@@ -119,12 +116,11 @@ length use cases—inline, single line, and multi-line.
         'https://react.carbondesignsystem.com/?path=/story/components-codesnippet--inline',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-code-snippet--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvcodesnippet--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvcodesnippet--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=code-snippet',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-code-snippet--inline',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-code-snippet--inline',
+    }}>{`
     <CodeSnippet type="inline">${codeSnippetSingle}</CodeSnippet>
 `}</ComponentVariant>
 </ComponentDemo>
@@ -264,7 +260,7 @@ manually highlighting the text and right clicking "copy".
   is in focus.
 
 For additional keyboard interactions, see the
-[accessibility tab](/components/code-snippet/accessibility#keyboard-interaction).
+[accessibility tab](/components/code-snippet/accessibility#keyboard-interaction).  
 
 ## Inline
 
@@ -323,8 +319,8 @@ Use multi-line code snippets for displaying multiple lines of code.
 
 #### Show more button
 
-A Show more ghost button can be added to a multi-line code snippet to show more
-or fewer lines of code. Use this functionality if your layout is tight on space.
+A Show more ghost button can be added to a multi-line code snippet to show more or fewer
+lines of code. Use this functionality if your layout is tight on space.
 
 <Row>
 <Column colLg={8}>
