--- a/src/pages/components/data-table/code.mdx
+++ b/src/pages/components/data-table/code.mdx
@@ -86,8 +86,7 @@ usage documentation, see the Storybooks for each framework below.
       label: 'With batch actions',
     },
   ]}
-  scope={{ rowData, headerData, React, Delete, Save, Download }}
->
+  scope={{ rowData, headerData, React, Delete, Save, Download }}>
   <ComponentVariant
     id="default-table"
     knobs={{ DataTable: ['isSortable'], Table: ['size', 'useZebraStyles'] }}
@@ -96,12 +95,11 @@ usage documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-datatable--usage',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-table--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--minimal',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--minimal',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
-    }}
-  >
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
+    }}>
     {`<DataTable rows={rowData} headers={headerData}>
   {({ rows, headers, getHeaderProps, getTableProps }) => (
     <TableContainer title="DataTable">
@@ -137,12 +135,11 @@ usage documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-datatable-selection--usage',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-table--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
-    }}
-  >
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
+    }}>
     {`<DataTable rows={rowData} headers={headerData}>
   {({
     rows,
@@ -187,12 +184,11 @@ usage documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-datatable-expansion--usage',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-table--with-expansion',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--slotted-expanding-data',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--slotted-expanding-data',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--expandable',
-    }}
-  >
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--expandable',
+    }}>
     {`<DataTable
   rows={rowData}
   headers={headerData}>
@@ -237,12 +233,11 @@ usage documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-datatable-batch-actions--usage',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-table--with-toolbar',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
-    }}
-  >
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
+    }}>
     {`<DataTable rows={rowData} headers={headerData}>
   {({
     rows,
