--- a/src/pages/components/date-picker/usage.mdx
+++ b/src/pages/components/date-picker/usage.mdx
@@ -69,8 +69,7 @@ for scheduling tasks.
       id: 'time-picker',
       label: 'Time picker',
     },
-  ]}
->
+  ]}>
   <ComponentVariant
     id="default-datepicker"
     knobs={{
@@ -82,12 +81,11 @@ for scheduling tasks.
         'https://react.carbondesignsystem.com/?path=/story/components-datepicker--simple',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-date-picker--simple',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvdatepicker--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvdatepicker--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=date-picker',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-date-picker--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-date-picker--default',
+    }}>{`
     <DatePicker dateFormat="m/d/Y" datePickerType="simple">
       <DatePickerInput
         id="date-picker-default-id"
@@ -108,12 +106,11 @@ for scheduling tasks.
         'https://react.carbondesignsystem.com/?path=/story/components-datepicker--single',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-date-picker--single',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvdatepicker--single',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvdatepicker--single',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=date-picker',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-date-picker--single-with-calendar',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-date-picker--single-with-calendar',
+    }}>{`
     <DatePicker dateFormat="m/d/Y" datePickerType="single">
       <DatePickerInput
         id="date-picker-calendar-id"
@@ -134,12 +131,11 @@ for scheduling tasks.
         'https://react.carbondesignsystem.com/?path=/story/components-datepicker--range',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-date-picker--range',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvdatepicker--range',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvdatepicker--range',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=date-picker',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-date-picker--range-with-calendar',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-date-picker--range-with-calendar',
+    }}>{`
     <DatePicker dateFormat="m/d/Y" datePickerType="range">
       <DatePickerInput
         id="date-picker-range-start"
@@ -165,12 +161,11 @@ for scheduling tasks.
         'https://react.carbondesignsystem.com/?path=/story/components-timepicker--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-time-picker--simple',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/storycomponents-cvdatepicker--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/storycomponents-cvdatepicker--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=date-picker',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-date-picker--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-date-picker--default',
+    }}>{`
     <TimePicker id="time-picker">
       <TimePickerSelect id="time-picker-select-1">
         <SelectItem value="AM" text="AM" />
