--- a/src/pages/components/list/usage.mdx
+++ b/src/pages/components/list/usage.mdx
@@ -45,8 +45,7 @@ between list items.
       id: 'unordered',
       label: 'Unordered list',
     },
-  ]}
->
+  ]}>
   <ComponentVariant
     id="ordered"
     links={{
@@ -54,12 +53,11 @@ between list items.
         'https://react.carbondesignsystem.com/?path=/story/components-orderedlist--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-list--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvlist--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvlist--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=list',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-list--ordered',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-list--ordered',
+    }}>{`
     <OrderedList>
       <ListItem>
         Ordered list level 1
@@ -90,12 +88,11 @@ between list items.
         'https://react.carbondesignsystem.com/?path=/story/components-unorderedlist--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-list--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvlist--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvlist--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=list',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-list--unordered',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-list--unordered',
+    }}>{`
       <UnorderedList>
         <ListItem>
           Unordered list level 1
