--- a/src/pages/components/modal/usage.mdx
+++ b/src/pages/components/modal/usage.mdx
@@ -89,8 +89,7 @@ destructive or irreversible then use a transactional danger modal.
       id: 'with-three-buttons',
       label: 'With three buttons',
     },
-  ]}
->
+  ]}>
   <ComponentVariant
     id="modal"
     knobs={{
@@ -101,12 +100,11 @@ destructive or irreversible then use a transactional danger modal.
         'https://react.carbondesignsystem.com/?path=/story/components-modal--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-modal--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=modal',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-modal--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-modal--default',
+    }}>{`
     <ModalWrapper
       buttonTriggerText="Launch modal"
       modalHeading="Modal heading"
@@ -122,12 +120,11 @@ destructive or irreversible then use a transactional danger modal.
         'https://react.carbondesignsystem.com/?path=/story/components-modal--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-modal--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=modal',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-modal--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-modal--default',
+    }}>{`
     <ModalWrapper
       hasScrollingContent
       size="sm"
@@ -170,12 +167,11 @@ destructive or irreversible then use a transactional danger modal.
         'https://react.carbondesignsystem.com/?path=/story/components-modal--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-modal--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=modal',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-modal--single-button',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-modal--single-button',
+    }}>{`
     <ModalWrapper
       buttonTriggerText="Launch modal"
       modalHeading="Modal heading"
@@ -192,12 +188,11 @@ destructive or irreversible then use a transactional danger modal.
         'https://react.carbondesignsystem.com/?path=/story/components-modal--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-modal--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=modal',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-modal--three-buttons',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-modal--three-buttons',
+    }}>{`
     <ModalWrapper
       buttonTriggerText="Launch modal"
       modalHeading="Modal heading"
