--- a/src/pages/components/search/code.mdx
+++ b/src/pages/components/search/code.mdx
@@ -66,8 +66,7 @@ documentation, see the Storybooks for each framework below.
       id: 'search',
       label: 'Search',
     },
-  ]}
->
+  ]}>
   <ComponentVariant
     id="search"
     knobs={{ Search: ['size', 'light'] }}
@@ -76,12 +75,11 @@ documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-search--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-search--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvsearch--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvsearch--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=search',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-search--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-search--default',
+    }}>{`
 <Search
   id="search-1"
   placeHolderText="Search"
