--- a/src/pages/components/structured-list/code.mdx
+++ b/src/pages/components/structured-list/code.mdx
@@ -73,8 +73,7 @@ code usage documentation, see the Storybooks for each framework below.
       label: 'Selectable structured list',
     },
   ]}
-  scope={{ CheckmarkFilled16 }}
->
+  scope={{ CheckmarkFilled16 }}>
   <ComponentVariant
     id="default-structured-list"
     links={{
@@ -82,12 +81,11 @@ code usage documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-structuredlist--simple',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-structured-list--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvstructuredlist--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvstructuredlist--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=structured-list',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-structured-list--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-structured-list--default',
+    }}>{`
     <StructuredListWrapper ariaLabel="Structured list">
       <StructuredListHead>
         <StructuredListRow
@@ -138,12 +136,11 @@ code usage documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-structuredlist--selection',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-structured-list--with-selection',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvstructuredlist--selectable-with-events',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvstructuredlist--selectable-with-events',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=structured-list',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-structured-list--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-structured-list--default',
+    }}>{`
     <StructuredListWrapper selection ariaLabel="Structured list">
       <StructuredListHead>
         <StructuredListRow
