--- a/src/pages/components/text-input/code.mdx
+++ b/src/pages/components/text-input/code.mdx
@@ -74,8 +74,7 @@ usage documentation, see the Storybooks for each framework below.
       id: 'text-area',
       label: 'Text area',
     },
-  ]}
->
+  ]}>
   <ComponentVariant
     id="text-input"
     knobs={{
@@ -86,12 +85,11 @@ usage documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-textinput--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-input--label',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtextinput--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvtextinput--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=text-input',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-input--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-input--default',
+    }}>{`
     <div>
       <TextInput
         helperText="Optional helper text"
@@ -109,12 +107,11 @@ usage documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-textinput--toggle-password-visibility',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-input--label',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtextinput--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvtextinput--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=text-input',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-input--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-input--default',
+    }}>{`
     <div>
     <TextInput.PasswordInput
       helperText="Optional helper text"
@@ -137,12 +134,11 @@ usage documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-textarea--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-input--textarea',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtextarea--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvtextarea--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=text-input',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-textarea--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-textarea--default',
+    }}>{`
     <div>
     <TextArea
       cols={50}
