--- a/src/pages/components/text-input/usage.mdx
+++ b/src/pages/components/text-input/usage.mdx
@@ -50,8 +50,7 @@ reflect the length of the content you expect the user to enter.
       id: 'text-area',
       label: 'Text area',
     },
-  ]}
->
+  ]}>
   <ComponentVariant
     id="text-input"
     knobs={{
@@ -62,12 +61,11 @@ reflect the length of the content you expect the user to enter.
         'https://react.carbondesignsystem.com/?path=/story/components-textinput--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-input--label',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtextinput--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvtextinput--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=text-input',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-input--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-input--default',
+    }}>{`
     <div>
       <TextInput
         helperText="Optional helper text"
@@ -85,12 +83,11 @@ reflect the length of the content you expect the user to enter.
         'https://react.carbondesignsystem.com/?path=/story/components-textinput--toggle-password-visibility',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-input--label',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtextinput--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvtextinput--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=text-input',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-input--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-input--default',
+    }}>{`
     <div>
     <TextInput.PasswordInput
       helperText="Optional helper text"
@@ -113,12 +110,11 @@ reflect the length of the content you expect the user to enter.
         'https://react.carbondesignsystem.com/?path=/story/components-textarea--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-input--textarea',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtextarea--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvtextarea--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=text-input',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-textarea--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-textarea--default',
+    }}>{`
     <div>
     <TextArea
       cols={50}
