--- a/src/pages/components/toggle/usage.mdx
+++ b/src/pages/components/toggle/usage.mdx
@@ -49,8 +49,7 @@ user “flips the switch”. They are commonly used for “on/off” switches.
       id: 'small-toggle',
       label: 'Toggle small',
     },
-  ]}
->
+  ]}>
   <ComponentVariant
     id="default-toggle"
     links={{
@@ -58,12 +57,11 @@ user “flips the switch”. They are commonly used for “on/off” switches.
         'https://react.carbondesignsystem.com/?path=/story/components-toggle--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-toggle--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtoggle--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvtoggle--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=toggle',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-toggle--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-toggle--default',
+    }}>{`
     <Toggle
       aria-label="toggle button"
       defaultToggled
@@ -78,12 +76,11 @@ user “flips the switch”. They are commonly used for “on/off” switches.
         'https://react.carbondesignsystem.com/?path=/story/components-toggle--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-toggle--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtoggle--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvtoggle--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=toggle',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-toggle--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-toggle--default',
+    }}>{`
     <ToggleSmall
       aria-label="toggle button"
       defaultToggled
