--- a/src/pages/components/tooltip/code.mdx
+++ b/src/pages/components/tooltip/code.mdx
@@ -77,8 +77,7 @@ documentation, see the Storybooks for each framework below.
       label: 'Definition tooltip',
     },
   ]}
-  scope={{ Filter16 }}
->
+  scope={{ Filter16 }}>
   <ComponentVariant
     id="tooltip"
     links={{
@@ -86,12 +85,11 @@ documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-tooltip--default-bottom',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tooltip--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtooltip--default-interactive-tootlip',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvtooltip--default-interactive-tootlip',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--default',
+    }}>{`
     <Tooltip
       direction="bottom"
       tabIndex={0}
@@ -118,12 +116,11 @@ documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-tooltipicon--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tooltip-icon--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtooltip--default-tootlip',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvtooltip--default-tootlip',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--icon',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--icon',
+    }}>{`
     <TooltipIcon
       tooltipText="Filter"
     >
@@ -140,12 +137,11 @@ documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-tooltipdefinition--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tooltip-definition--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtooltip--default-definition-tootlip',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvtooltip--default-definition-tootlip',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--definition',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--definition',
+    }}>{`
     <TooltipDefinition
       tooltipText="Brief description of the dotted, underlined word above."
     >
