--- a/src/pages/data-visualization/getting-started/index.mdx
+++ b/src/pages/data-visualization/getting-started/index.mdx
@@ -32,8 +32,7 @@ requests to the
 <Column colMd={4} colLg={4} noGutterSm>
   <ResourceCard
     subTitle="Carbon Charts demo site"
-    href="https://carbon-design-system.github.io/carbon-charts/"
-  >
+    href="https://carbon-design-system.github.io/carbon-charts/">
     <MdxIcon name="storybook" />
   </ResourceCard>
 </Column>
@@ -42,8 +41,7 @@ requests to the
   <ResourceCard
     subTitle="Data visualization master Sketch file"
     href="https://www.sketch.com/s/1a36060a-7a5d-4ddb-aab1-639caa1f74d4"
-    actionIcon="download"
-  >
+    actionIcon="download">
     <MdxIcon name="sketch" />
   </ResourceCard>
 </Column>
