--- a/src/pages/data-visualization/simple-charts/index.mdx
+++ b/src/pages/data-visualization/simple-charts/index.mdx
@@ -30,8 +30,7 @@ import ChartDemoGroup from '../../../components/data-visualization/ChartDemoGrou
   <Column colMd={4} colLg={4} noGutterSm>
     <ResourceCard
       subTitle="Carbon Charts demo site"
-      href="https://carbon-design-system.github.io/carbon-charts/"
-    >
+      href="https://carbon-design-system.github.io/carbon-charts/">
       <MdxIcon name="storybook" />
     </ResourceCard>
   </Column>
