--- a/src/pages/components/breadcrumb/code.mdx
+++ b/src/pages/components/breadcrumb/code.mdx
@@ -67,8 +67,7 @@ usage documentation, see the Storybooks for each framework below.
       id: 'currentPage',
       label: 'Current page breadcrumb',
     },
-  ]}
->
+  ]}>
   <ComponentVariant
     id="currentPage"
     links={{
@@ -76,12 +75,11 @@ usage documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-breadcrumb--breadcrumb',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-breadcrumb--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvbreadcrumb--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvbreadcrumb--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=breadcrumb',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-breadcrumb--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-breadcrumb--default',
+    }}>{`
 <Breadcrumb noTrailingSlash>
   <BreadcrumbItem href="/">Breadcrumb 1</BreadcrumbItem>
   <BreadcrumbItem href="/">Breadcrumb 2</BreadcrumbItem>
@@ -95,12 +93,11 @@ usage documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-breadcrumb--breadcrumb',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-breadcrumb--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvbreadcrumb--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvbreadcrumb--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=breadcrumb',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-breadcrumb--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-breadcrumb--default',
+    }}>{`
 <Breadcrumb>
   <BreadcrumbItem href="/">Breadcrumb 1</BreadcrumbItem>
   <BreadcrumbItem href="/">Breadcrumb 2</BreadcrumbItem>
