--- a/src/pages/components/breadcrumb/usage.mdx
+++ b/src/pages/components/breadcrumb/usage.mdx
@@ -68,8 +68,7 @@ type used should be consistent across a product.
       id: 'currentPage',
       label: 'Current page breadcrumb',
     },
-  ]}
->
+  ]}>
   <ComponentVariant
     id="currentPage"
     links={{
@@ -77,12 +76,11 @@ type used should be consistent across a product.
         'https://react.carbondesignsystem.com/?path=/story/components-breadcrumb--breadcrumb',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-breadcrumb--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvbreadcrumb--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvbreadcrumb--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=breadcrumb',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-breadcrumb--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-breadcrumb--default',
+    }}>{`
 <Breadcrumb noTrailingSlash>
   <BreadcrumbItem href="/">Breadcrumb 1</BreadcrumbItem>
   <BreadcrumbItem href="/">Breadcrumb 2</BreadcrumbItem>
@@ -96,12 +94,11 @@ type used should be consistent across a product.
         'https://react.carbondesignsystem.com/?path=/story/components-breadcrumb--breadcrumb',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-breadcrumb--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvbreadcrumb--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvbreadcrumb--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=breadcrumb',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-breadcrumb--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-breadcrumb--default',
+    }}>{`
 <Breadcrumb>
   <BreadcrumbItem href="/">Breadcrumb 1</BreadcrumbItem>
   <BreadcrumbItem href="/">Breadcrumb 2</BreadcrumbItem>
