--- a/src/pages/components/checkbox/accessibility.mdx
+++ b/src/pages/components/checkbox/accessibility.mdx
@@ -8,8 +8,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 <PageDescription>
 
-Design annotations are needed for specific instances shown below, but for the
-standard checkbox component, Carbon already incorporates accessibility.
+Design annotations are needed for specific instances shown below, but for the standard checkbox component, Carbon already incorporates accessibility.
 
 </PageDescription>
 
@@ -21,14 +20,11 @@ standard checkbox component, Carbon already incorporates accessibility.
 
 ## What Carbon provides
 
-Carbon bakes keyboard operation into its components, improving the experience of
-blind users and others who operate via the keyboard. Carbon incorporates many
-other accessibility considerations, some of which are described below.
+Carbon bakes keyboard operation into its components, improving the experience of blind users and others who operate via the keyboard. Carbon incorporates many other accessibility considerations, some of which are described below.
 
 ### Keyboard interactions
 
-Each checkbox can be reached by `Tab` and selected with `Space` independently.
-This matches the established HTML interaction pattern.
+Each checkbox can be reached by `Tab` and selected with `Space` independently. This matches the established HTML interaction pattern.
 
 <Row>
 <Column colLg={8}>
@@ -42,8 +38,7 @@ This matches the established HTML interaction pattern.
 
 ### Grouping
 
-For groups of checkboxes, Carbon already provides the code for screen readers to
-properly detect the set of checkboxes and announce the group label.
+For groups of checkboxes, Carbon already provides the code for screen readers to properly detect the set of checkboxes and announce the group label.
 
 <Row>
 <Column colLg={8}>
@@ -61,33 +56,22 @@ Design annotations are needed for the following instances.
 
 ### Meaningful order
 
-Checkboxes can appear in multiple columns. If there is a meaningful order to the
-items (such as days of the week), annotate whether the tab order is by row or by
-column. See
-[Specify the tab order](https://www.ibm.com/able/toolkit/design/ux/navigation/#tab-order).
+Checkboxes can appear in multiple columns. If there is a meaningful order to the items (such as days of the week), annotate whether the tab order is by row or by column. See [Specify the tab order](https://www.ibm.com/able/toolkit/design/ux/navigation/#tab-order).
 
 <Row>
 <Column colLg={8}>
 
 ![checkboxes with instruction to ‘navigate in columns'](images/checkbox-accessibility-3.png)
 
-<Caption>
-  Annotate if there is meaningful navigation order in rows of checkboxes.
-</Caption>
+<Caption>Annotate if there is meaningful navigation order in rows of checkboxes.</Caption>
 
 </Column>
 </Row>
 
 ## Development considerations
 
-Keep these considerations in mind if you are modifying Carbon or creating a
-custom component:
+Keep these considerations in mind if you are modifying Carbon or creating a custom component:
 
-- Checkboxes are grouped using `<fieldset>` and `<legend>`.
-- A tri-state checkbox that is partially checked (indeterminate) has
-  `aria-checked` set to `"mixed"`. See
-  [Behaviors](https://carbondesignsystem.com/components/checkbox/usage/#behaviors)
-  on the Usage tab for details.
-- See the
-  [ARIA authoring practices](https://www.w3.org/TR/wai-aria-practices-1.2/#checkbox)
-  for more considerations.
+* Checkboxes are grouped using `<fieldset>` and `<legend>`.
+* A tri-state checkbox that is partially checked (indeterminate) has `aria-checked` set to `"mixed"`. See [Behaviors](https://carbondesignsystem.com/components/checkbox/usage/#behaviors) on the Usage tab for details.
+* See the [ARIA authoring practices](https://www.w3.org/TR/wai-aria-practices-1.2/#checkbox) for more considerations.
