--- a/src/pages/components/data-table/usage.mdx
+++ b/src/pages/components/data-table/usage.mdx
@@ -84,8 +84,7 @@ import {
       label: 'With batch actions',
     },
   ]}
-  scope={{ rowData, headerData, React, Delete, Save, Download }}
->
+  scope={{ rowData, headerData, React, Delete, Save, Download }}>
   <ComponentVariant
     id="default-table"
     knobs={{ DataTable: ['isSortable'], Table: ['size', 'useZebraStyles'] }}
@@ -94,12 +93,11 @@ import {
         'https://react.carbondesignsystem.com/?path=/story/components-datatable--usage',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-table--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--minimal',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--minimal',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
-    }}
-  >
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
+    }}>
     {`<DataTable rows={rowData} headers={headerData}>
   {({ rows, headers, getHeaderProps, getTableProps }) => (
     <TableContainer title="DataTable">
@@ -135,12 +133,11 @@ import {
         'https://react.carbondesignsystem.com/?path=/story/components-datatable-selection--usage',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-table--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
-    }}
-  >
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
+    }}>
     {`<DataTable rows={rowData} headers={headerData}>
   {({
     rows,
@@ -185,12 +182,11 @@ import {
         'https://react.carbondesignsystem.com/?path=/story/components-datatable-expansion--usage',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-table--with-expansion',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--slotted-expanding-data',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--slotted-expanding-data',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--expandable',
-    }}
-  >
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--expandable',
+    }}>
     {`<DataTable
   rows={rowData}
   headers={headerData}>
@@ -235,12 +231,11 @@ import {
         'https://react.carbondesignsystem.com/?path=/story/components-datatable-batch-actions--usage',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-table--with-toolbar',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
-    }}
-  >
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
+    }}>
     {`<DataTable rows={rowData} headers={headerData}>
   {({
     rows,
