--- a/src/pages/components/dropdown/code.mdx
+++ b/src/pages/components/dropdown/code.mdx
@@ -81,8 +81,7 @@ documentation, see the Storybooks for each framework below.
       label: 'Filterable multiselect',
     },
   ]}
-  scope={{ items }}
->
+  scope={{ items }}>
   <ComponentVariant
     id="default-dropdown"
     knobs={{
@@ -93,12 +92,11 @@ documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-dropdown--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-dropdown--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvdropdown--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvdropdown--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-dropdown--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-dropdown--default',
+    }}>{`
     <Dropdown
       ariaLabel="Dropdown"
       id="carbon-dropdown-example"
@@ -117,12 +115,11 @@ documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-combobox--combobox',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-dropdown--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvcombobox--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvcombobox--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-combo-box--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-combo-box--default',
+    }}>{`
     <ComboBox
       ariaLabel="ComboBox"
       id="carbon-combobox-example"
@@ -141,12 +138,11 @@ documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-multiselect--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-dropdown--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvmultiselect--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvmultiselect--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-multi-select--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-multi-select--default',
+    }}>{`
     <MultiSelect
       ariaLabel="MultiSelect"
       id="carbon-multiselect-example"
@@ -162,12 +158,11 @@ documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-multiselect--filterable',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-dropdown--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvmultiselect--user-filter-and-or-highlight',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvmultiselect--user-filter-and-or-highlight',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-multi-select--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-multi-select--default',
+    }}>{`
     <MultiSelect.Filterable
       ariaLabel="Filterable MultiSelect"
       id="carbon--filterable-multiselect-example"
