--- a/src/pages/components/dropdown/usage.mdx
+++ b/src/pages/components/dropdown/usage.mdx
@@ -88,8 +88,7 @@ functionality—dropdown, multiselect, and combo box.
       label: 'Filterable multiselect',
     },
   ]}
-  scope={{ items }}
->
+  scope={{ items }}>
   <ComponentVariant
     id="default-dropdown"
     knobs={{
@@ -100,12 +99,11 @@ functionality—dropdown, multiselect, and combo box.
         'https://react.carbondesignsystem.com/?path=/story/components-dropdown--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-dropdown--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvdropdown--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvdropdown--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-dropdown--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-dropdown--default',
+    }}>{`
     <Dropdown
       ariaLabel="Dropdown"
       id="carbon-dropdown-example"
@@ -124,12 +122,11 @@ functionality—dropdown, multiselect, and combo box.
         'https://react.carbondesignsystem.com/?path=/story/components-combobox--combobox',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-dropdown--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvcombobox--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvcombobox--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-combo-box--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-combo-box--default',
+    }}>{`
     <ComboBox
       ariaLabel="ComboBox"
       id="carbon-combobox-example"
@@ -148,12 +145,11 @@ functionality—dropdown, multiselect, and combo box.
         'https://react.carbondesignsystem.com/?path=/story/components-multiselect--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-dropdown--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvmultiselect--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvmultiselect--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-multi-select--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-multi-select--default',
+    }}>{`
     <MultiSelect
       ariaLabel="MultiSelect"
       id="carbon-multiselect-example"
@@ -169,12 +165,11 @@ functionality—dropdown, multiselect, and combo box.
         'https://react.carbondesignsystem.com/?path=/story/components-multiselect--filterable',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-dropdown--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvmultiselect--user-filter-and-or-highlight',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvmultiselect--user-filter-and-or-highlight',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-multi-select--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-multi-select--default',
+    }}>{`
     <MultiSelect.Filterable
       ariaLabel="Filterable MultiSelect"
       id="carbon--filterable-multiselect-example"
