--- a/src/pages/components/link/code.mdx
+++ b/src/pages/components/link/code.mdx
@@ -66,8 +66,7 @@ documentation, see the Storybooks for each framework below.
       id: 'link',
       label: 'Link',
     },
-  ]}
->
+  ]}>
   <ComponentVariant
     id="link"
     knobs={{ Link: ['disabled', 'inline'] }}
@@ -76,12 +75,11 @@ documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-link--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-link--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvlink--a',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvlink--a',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=link',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-link--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-link--default',
+    }}>{`
   <Link href="#">Link</Link>
   `}</ComponentVariant>
 </ComponentDemo>
