--- a/src/pages/components/list/code.mdx
+++ b/src/pages/components/list/code.mdx
@@ -69,8 +69,7 @@ documentation, see the Storybooks for each framework below.
       id: 'unordered',
       label: 'Unordered list',
     },
-  ]}
->
+  ]}>
   <ComponentVariant
     id="ordered"
     links={{
@@ -78,12 +77,11 @@ documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-orderedlist--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-list--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvlist--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvlist--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=list',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-list--ordered',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-list--ordered',
+    }}>{`
     <OrderedList>
       <ListItem>
         Ordered list level 1
@@ -114,12 +112,11 @@ documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-unorderedlist--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-list--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvlist--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvlist--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=list',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-list--unordered',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-list--unordered',
+    }}>{`
       <UnorderedList>
         <ListItem>
           Unordered list level 1
