--- a/src/pages/components/loading/code.mdx
+++ b/src/pages/components/loading/code.mdx
@@ -66,8 +66,7 @@ documentation, see the Storybooks for each framework below.
       id: 'loading',
       label: 'Loading',
     },
-  ]}
->
+  ]}>
   <ComponentVariant
     id="loading"
     knobs={{ Loading: ['small', 'withOverlay'] }}
@@ -76,12 +75,11 @@ documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-loading--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-loading--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvloading--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvloading--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=loading',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-loading--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-loading--default',
+    }}>{`
     <Loading
       description="Active loading indicator" withOverlay={false}
     />
