--- a/src/pages/components/modal/code.mdx
+++ b/src/pages/components/modal/code.mdx
@@ -78,8 +78,7 @@ documentation, see the Storybooks for each framework below.
       id: 'with-three-buttons',
       label: 'With three buttons',
     },
-  ]}
->
+  ]}>
   <ComponentVariant
     id="modal"
     knobs={{
@@ -90,12 +89,11 @@ documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-modal--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-modal--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=modal',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-modal--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-modal--default',
+    }}>{`
     <ModalWrapper
       buttonTriggerText="Launch modal"
       modalHeading="Modal heading"
@@ -111,12 +109,11 @@ documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-modal--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-modal--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=modal',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-modal--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-modal--default',
+    }}>{`
     <ModalWrapper
       hasScrollingContent
       size="sm"
@@ -159,12 +156,11 @@ documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-modal--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-modal--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=modal',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-modal--single-button',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-modal--single-button',
+    }}>{`
     <ModalWrapper
       buttonTriggerText="Launch modal"
       modalHeading="Modal heading"
@@ -181,12 +177,11 @@ documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-modal--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-modal--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=modal',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-modal--three-buttons',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-modal--three-buttons',
+    }}>{`
     <ModalWrapper
       buttonTriggerText="Launch modal"
       modalHeading="Modal heading"
