--- a/src/pages/components/pagination/usage.mdx
+++ b/src/pages/components/pagination/usage.mdx
@@ -37,8 +37,7 @@ The default number displayed will vary depending on the context.
       id: 'pagination',
       label: 'Pagination',
     },
-  ]}
->
+  ]}>
   <ComponentVariant
     id="pagination"
     knobs={{
@@ -54,12 +53,11 @@ The default number displayed will vary depending on the context.
         'https://react.carbondesignsystem.com/?path=/story/components-pagination--pagination',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-pagination--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvpagination--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvpagination--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=pagination',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-pagination--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-pagination--default',
+    }}>{`
   <div style={{width: '800px'}}>
     <Pagination
       backwardText="Previous page"
