--- a/src/pages/components/progress-indicator/code.mdx
+++ b/src/pages/components/progress-indicator/code.mdx
@@ -67,8 +67,7 @@ code usage documentation, see the Storybooks for each framework below.
       id: 'progress-indicator',
       label: 'Progress indicator',
     },
-  ]}
->
+  ]}>
   <ComponentVariant
     id="progress-indicator"
     knobs={{
@@ -80,13 +79,12 @@ code usage documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-progressindicator--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-progress-indicator--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvprogress--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvprogress--default',
       Vanilla:
         'https://the-carbon-components.netlify.com/?nav=progress-indicator',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-progress-indicator--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-progress-indicator--default',
+    }}>{`
   <div className="some-container">
     <ProgressIndicator currentIndex={1}>
         <ProgressStep
