--- a/src/pages/components/select/usage.mdx
+++ b/src/pages/components/select/usage.mdx
@@ -50,8 +50,7 @@ while the dropdown component can be styled as needed.
       id: 'select',
       label: 'Select',
     },
-  ]}
->
+  ]}>
   <ComponentVariant
     id="select"
     knobs={{
@@ -64,12 +63,11 @@ while the dropdown component can be styled as needed.
         'https://react.carbondesignsystem.com/?path=/story/components-select--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-select--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvselect--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvselect--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=select',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-select--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-select--default',
+    }}>{`
 <Select
   defaultValue="placeholder-item"
   helperText="Optional helper text"
