--- a/src/pages/components/tabs/usage.mdx
+++ b/src/pages/components/tabs/usage.mdx
@@ -43,8 +43,7 @@ Tabs are used to quickly navigate between views within the same context.
       id: 'tabs',
       label: 'Tabs',
     },
-  ]}
->
+  ]}>
   <ComponentVariant
     id="tabs"
     knobs={{ Tabs: ['type'], Tab: ['disabled', 'selected'] }}
@@ -53,12 +52,11 @@ Tabs are used to quickly navigate between views within the same context.
         'https://react.carbondesignsystem.com/?path=/story/components-tabs--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tabs--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtabs--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvtabs--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tabs',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-tabs--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tabs--default',
+    }}>{`
 <div style={{ width: '50%' }}>
   <Tabs scrollIntoView={false}>
     <Tab
