--- a/src/pages/components/tile/code.mdx
+++ b/src/pages/components/tile/code.mdx
@@ -82,8 +82,7 @@ documentation, see the Storybooks for each framework below.
       id: 'expandable-tile',
       label: 'Expandable tile',
     },
-  ]}
->
+  ]}>
   <ComponentVariant
     id="tile"
     knobs={{
@@ -94,12 +93,11 @@ documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-tile--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tiles--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tile',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-tile--default',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tile--default',
+    }}>{`
     <Tile>
       Default tile
     </Tile>
@@ -114,12 +112,11 @@ documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-tile--clickable',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tiles--basic',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--default',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tile',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-tile--clickable',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tile--clickable',
+    }}>{`
     <ClickableTile
       href="#"
     >
@@ -136,12 +133,11 @@ documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-tile--radio',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tiles--clickable',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--clickable',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--clickable',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tile',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-tile--single-selectable',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tile--single-selectable',
+    }}>{`
     <TileGroup
       defaultSelected="default-selected"
       legend="Radio tile group"
@@ -183,12 +179,11 @@ documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-tile--multi-select',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tiles--selectable',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--selectable',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--selectable',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tile',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-tile--single-selectable',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tile--single-selectable',
+    }}>{`
     <div
       aria-label="selectable tiles"
       role="group"
@@ -232,12 +227,11 @@ documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-tile--expandable',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tiles--expandable',
-      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--expandable',
+      Vue:
+        'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--expandable',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tile',
-      'Web Components':
-        'https://web-components.carbondesignsystem.com/?path=/story/components-tile--expandable',
-    }}
-  >{`
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tile--expandable',
+    }}>{`
     <ExpandableTile
       tabIndex={0}
       tileCollapsedIconText="Interact to Expand tile"
